--- a/index.scss
+++ b/index.scss
@@ -81,6 +81,14 @@ picture {
     height: auto;
 }
 
+// Baseline video resets
+video {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: var(--video-aspect-ratio, 16/9);
+}
+
 // Inherit fonts for inputs and buttons
 input,
 button,
