--- a/index.scss
+++ b/index.scss
@@ -36,7 +36,7 @@ ol {
     margin-bottom: 0;
     padding-left: 0;
 
-    &:where:not([class]) {
+    &:where(:not([class])) {
         padding-left: 1.25em;
     }
 }
